--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/jpeg" href="/logo-central.jpeg">
-    <base href="/Portfolio-WeBear/">
+    <base href="/WeBear-WEB/">
   </head>
   <body>
     <app-root></app-root>
