--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/jpeg" href="/logo-central.jpeg">
+    <link rel="icon" type="image/jpeg" href="/src/assets/img/logo-central.jpeg">
     <base href="/">
   </head>
   <body>
